@@ -58,6 +58,9 @@ Version 1.3.11+svn:
    * fix bug #8991: Load a second savegame crash when using --test option
  * map editor and terrains:
    * added village count to editor
+ * miscellaneous and bug fixes:
+   * added a new drawing framework only used for linger overlays at the
+     moment, other stuff can be converted later
 
 Version 1.3.11:
  * campaigns
